@@ -178,6 +178,7 @@ class Start(FSLiveCommand):
                     nodes=self.nodes_support.get_nodeset(),
                     excluded=self.nodes_support.get_excludes(),
                     indexes=self.indexes_support.get_rangeset(),
+                    labels=self.target_support.get_labels(),
                     event_handler=eh)
 
             # Prepare options...
