@@ -150,6 +150,7 @@ class Stop(FSLiveCommand):
                     nodes=self.nodes_support.get_nodeset(),
                     excluded=self.nodes_support.get_excludes(),
                     indexes=self.indexes_support.get_rangeset(),
+                    labels=self.target_support.get_labels(),
                     event_handler=eh)
 
             mount_options = {}
