@@ -94,6 +94,7 @@ class Tune(FSLiveCommand):
                     nodes=self.nodes_support.get_nodeset(),
                     excluded=self.nodes_support.get_excludes(),
                     indexes=self.indexes_support.get_rangeset(),
+                    labels=self.target_support.get_labels(),
                     event_handler=eh)
 
             fs.set_debug(self.debug_support.has_debug())
